Added Reservation and implementef new  Feature... Work still in process

--- a/src/Frontend/style/stylesheet.css
+++ b/src/Frontend/style/stylesheet.css
@@ -611,7 +611,7 @@ input {
   padding: 15px 20px;
   font-size: 0.8rem;
   border: 1.5px solid rgba(60, 60, 60, 0.8);
-  background-color: #e6d3d6;
+  background-color: #ffffff;
   border-top-left-radius: 2px;
   border-bottom-left-radius: 2px;
   float: left;
